# LecturePCWKMBP

./: .gitignore  README.md
Uebungsblaetter2018/: LeistungsnachweisI.lyx  Uebung0.lyx  Uebung1.lyx  Uebung2.lyx  Uebung3.lyx  Uebung4.lyx  Uebung5.lyx
leistungsnachweis/vorlagen/: CMakeLists.txt  UpdaterSAW.h  main_analyze_scattering.cpp  main_saw.cpp  oneclick_install_lemonade.sh  runSims.sh
uebung0/: excersiceCPWKMBP_1.ipynb
uebung0/Die_Konsole/: konsole.sh
uebung0/Programmieren/: hello_world.sh
uebung0/ProjektorganisationC++/: CMakeLists.txt  calculator.cpp  calculator.h  main_programming.cpp  plot_linear_function.plt  programmorganisation.sh
uebung0/ProjektorganisationPython/: calculator.py  play_with_calculator.py
uebung1/Integration/: main_pi.cpp  monteCarloIntegration.ipynb
uebung1/linearCongruential/: main_rng.cpp  myRNG.py  rng_linear_congruential.cpp  rng_linear_congruential.h  uebung2.ipynb
uebung2/: isingWorkbench.ipynb
uebung2/ising/: myIsing.py  runImportanceSampling.py
uebung2/ising_results/: CMakeLists.txt  ising_simulations.sh  ising_simulator.cpp  ising_simulator.h  main_ising.cpp  plot_ising.gpi  runImportanceSampling.py  runSimpleSampling.py
uebung2/vorlagen/: ising_simulator.cpp  ising_simulator.h  main_ising.cpp  myIsing.py
uebung3/: myRandomWalk.py
uebung3/dynamicsCPP/: AnalyzerAutoCorrelation.h  AnalyzerReeAndRg.h  CMakeLists.txt  UpdaterRandomWalk.h  main_polymerDynamics.cpp  oneclick_install_lemonade.sh
uebung3/randomWalkCPP/: AnalyzerEndPosition.h  main_randomWalk.cpp  oneclick_install_lemonade.sh
uebung3/randomWalkCpp/: AnalyzerAutoCorrelation.h  AnalyzerEndPosition.h  UpdaterRandomWalk.h  main_randomWalk.cpp
uebung3/randomWalkPy/: myRandomWalk.py  randomWalk.ipynb
uebung3/vorlagen/: myRandomWalk.py
uebung3/vorlagenCPP/: AnalyzerReeAndRg.h  CMakeLists.txt  main_polymerDynamics.cpp
uebung3/vorlagenPy/: myRandomWalk.py
uebung4/brushCpp/: AnalyzerBrushHight.h  CMakeLists.txt  UpdaterAddGraftedChains.h  main_analyze_hight.cpp  main_brush_simulator.cpp  main_create_brush.cpp
uebung4/brushPy/: bfmSimulator.ipynb  bfmSimulator.py  useTheBFMSimulator.py
uebung4/confinementCpp/: AnalyzerReeAndRg.h  AnalyzerScattering.h  CMakeLists.txt  main_analyze_scattering.cpp  main_create_ideal_chain.cpp  main_create_real_chain.cpp  main_ideal_Simulator.cpp  main_real_Simulator.cpp
uebung4/confinementPy/: bfmSimulator.ipynb  useTheBFMSimulator.py
uebung5/adsorption/: AnalyzerAdsorption.h  CMakeLists.txt  FeatureAdsorption.h  FeatureAdsorptionReadWrite.h  main_adsorption_Simulator_ideal.cpp  main_adsorption_Simulator_real.cpp  main_analyze_adsorption.cpp  main_analyze_radius.cpp  main_create_adsorbing_chain.cpp
uebung5/selfAvoidingWalk/: mySelfAvoidingWalk.py  selfAvoidingWalk.ipynb
